Jenkins Installation in Ec2 - terraform code/security-group.tf
resource "aws_security_group" "public-ec2example" {
  name        = "${var.sg-name}-${local.security-group.name}"
  description = local.security-group.description


  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
